feat: delete endpoint docs
